<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SuggestionsAct">
    <ImageView
        android:id="@+id/go_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_back"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suggestions"
        android:textColor="@color/soft_green_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/go_back"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/manage_stress"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/stress_manage"/>
            </LinearLayout> <!-- manage_stress -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/manage_stress_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/enjoy_yourself"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/enjoy_yourself"/>
            </LinearLayout> <!-- enjoy_yourself -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/enjoy_yourself_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/self_esteem"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/self_esteem"/>
            </LinearLayout> <!-- self_esteem -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/esteem_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/enjoy_work"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/enjoy_work"/>
            </LinearLayout> <!-- enjoy_work -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/enjoy_work_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/finance"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/finance"/>
            </LinearLayout> <!-- finance -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/finance_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/nurture"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/nurture"/>
            </LinearLayout> <!-- nurture  -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/esteem_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/down_time"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/down_time"/>
            </LinearLayout> <!-- down_time -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:text="@string/down_time_desc"
                android:letterSpacing="0.02"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>