<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_dia_bg"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/note_dia_title"
            android:textColor="@color/aqua"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--title-->
        <EditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dia_edit_bg"
            android:elevation="10dp"
            android:hint="@string/hint_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/aqua"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <!--details-->
        <EditText
            android:id="@+id/descET"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dia_edit_bg"
            android:elevation="10dp"
            android:gravity="top"
            android:hint="@string/hint_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/aqua"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/timeDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textColor="@color/aqua"
            android:layout_gravity="center_horizontal"
            android:text="@string/time" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/addbtn_bg"
            android:elevation="10dp"
            android:foreground="@drawable/ripple_effect"
            android:text="Add"
            android:textColor="@color/aqua_dark" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingBar"
        style="@style/ProgressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/green"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>